--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.1.7",
     "gh-pages": "^6.1.1",
+    "i18next": "^23.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^14.1.1",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
