--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.1.7",
     "gh-pages": "^6.1.1",
     "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
