--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://zerox3200.github.io/BB",
   "name": "bakistan",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +11,6 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
     "framer-motion": "^11.1.7",
-    "gh-pages": "^6.1.1",
     "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "react": "^18.2.0",
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
