--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zerox3200.github.io/BB",
+  "homepage": "https://zerox3200.github.io/react-gh-pages",
   "name": "bakistan",
   "version": "0.1.0",
   "private": true,
