--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
     "framer-motion": "^11.1.7",
@@ -20,7 +21,9 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.1",
     "react-icons": "^5.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-loader-spinner": "^6.1.6",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
