Clear and remove unused

--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -61,6 +61,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@craco/craco": "^7.1.0",
+    "@fullhuman/postcss-purgecss": "^6.0.0",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0"
   }
 }
