--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
-    "postcss-cli": "^11.0.0"
+    "postcss-cli": "^11.0.0",
+    "terser-webpack-plugin": "^5.3.10"
   }
 }
